--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-     "serialize-javascript": ">=2.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.15.0",
+    "fs": "0.0.1-security",
     "mysql": "^2.16.0",
     "nodemon": "^1.19.2",
     "react": "^16.10.1",
-    "react-dom": "^16.10.1"
+    "react-dom": "^16.10.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "babel": {
     "presets": [
