--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodemon": "^1.19.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "serialize-javascript": ">=2.1.1"
+    "serialize-javascript": ">=2.1.1",
+    "styled-components": "^5.0.1"
   },
   "babel": {
     "presets": [
